[package]
name = "compile-po2mo"
version = "0.3.0"
edition = "2021"
authors = [ "Brett Dong <brett.browning.dong@gmail.com>" ]
license = "MIT"
repository = "https://github.com/brettdong/compile-po2mo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polib = "0.1.0"
glob = "0.3.0"
rayon = "1.5.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
